# simple_translater

./: .gitignore  Cargo.toml  readme.md  requirements.txt
ml/: translate.py
src/: main.rs
templates/: index.hbs
universal_transformer/: .floydexpt  .floydignore  floyd.yml  model.py  readme.md  train.py  translate.py
