[package]
name = "simple_translater"
version = "0.1.0"
authors = ["maezono <maezonoinfo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.*"
router = "*"
handlebars = "3.*"
handlebars-iron = "0.29"
params = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
